--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="hero-container">
                 <div class="hero-content">
-                    <h2 data-de="Sprachtherapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Logopädische Sprachtherapie für Erwachsene</h2>
+                    <h2 data-de="Sprachtherapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Sprachtherapie für Erwachsene</h2>
                     <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="Home visits in Ebringen, Paffenweiler, Schallstadt and surrounding areas">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
                     <p data-de="Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache" data-en="Diagnosis, therapy and counseling for adults with acquired speech, language or swallowing disorders of neurological origin">Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache</p>
                     <a href="#contact" class="cta-button" data-de="Kontakt aufnehmen" data-en="Get in Touch">Kontakt aufnehmen</a>
@@ -169,15 +169,6 @@
                             <h3 data-de="Anschrift" data-en="Address">Anschrift</h3>
                             <p data-de="Hausbesuche in der Region" data-en="Home visits in the region">Hausbesuche in der Region</p>
                         </div>
-                    </div>
-                </div>
-                <div class="contact-decoration">
-                    <div class="decoration-circle"></div>
-                    <div class="decoration-line"></div>
-                    <div class="decoration-dots">
-                        <span></span>
-                        <span></span>
-                        <span></span>
                     </div>
                 </div>
             </div>
