--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="hero-container">
                 <div class="hero-content">
                     <h2 data-de="Sprachtherapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Sprachtherapie für Erwachsene</h2>
-                    <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="Home visits in Ebringen, Paffenweiler, Schallstadt and surrounding areas">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
+                    <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="home visits in and around greater Freiburg area">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
                     <p data-de="Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache" data-en="Diagnosis, therapy and counseling for adults with acquired speech, language or swallowing disorders of neurological origin">Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache</p>
                     <a href="#contact" class="cta-button" data-de="Kontakt aufnehmen" data-en="Get in Touch">Kontakt aufnehmen</a>
                 </div>
@@ -167,7 +167,7 @@
                         </div>
                         <div>
                             <h3 data-de="Anschrift" data-en="Address">Anschrift</h3>
-                            <p data-de="Hausbesuche in der Region" data-en="Home visits in the region">Hausbesuche in der Region</p>
+                            <p data-de="Ebringen" data-en="Ebringen">Ebringen</p>
                         </div>
                     </div>
                 </div>
