--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="hero-content">
                     <h2 data-de="Sprachtherapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Sprachtherapie für Erwachsene</h2>
                     <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="home visits in and around greater Freiburg area">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
-                    <p data-de="Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache" data-en="Diagnosis, therapy and counseling for adults with acquired speech, language or swallowing disorders of neurological origin">Diagnostik, Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen neurologischer Ursache</p>
+                    <p data-de="Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen" data-en="Therapy and counseling for adults with acquired speech, language or swallowing disorders">Therapie und Beratung für Erwachsene mit Sprech-, Sprach- oder Schluckstörungen</p>
                     <a href="#contact" class="cta-button" data-de="Kontakt aufnehmen" data-en="Get in Touch">Kontakt aufnehmen</a>
                 </div>
             </div>
