--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav">
             <div class="nav-container">
                 <div class="logo">
-                    <h1 data-de="Anika Mac Namara, M.Sc." data-en="Anika Mac Namara, M.Sc.">Anika Mac Namara, M.Sc.</h1>
+                    <h1 data-de="Anika Mac Namara, Logopädin (M.Sc.)" data-en="Anika Mac Namara, M.Sc.">Anika Mac Namara, Logopädin (M.Sc.)</h1>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#services" data-de="Schwerpunkte" data-en="Services">Schwerpunkte</a></li>
