--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <section id="services" class="services">
             <div class="container">
-                <h2 data-de="Logopädische Schwerpunkte" data-en="Speech Therapy Specialties">Logopädische Schwerpunkte</h2>
+                <h2 data-de="Leistungen" data-en="Speech Therapy Specialties">Leistungen</h2>
                 <div class="services-grid">
                     <div class="service-card">
                         <h3 data-de="Neurologische Störungen" data-en="Neurological Disorders">Neurologische Störungen</h3>
