Update header text for speech therapy section in index.html

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
             <div class="hero-container">
                 <div class="hero-content">
-                    <h2 data-de="Sprachtherapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Sprachtherapie für Erwachsene</h2>
+                    <h2 data-de="Logopädische Therapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Logopädische Therapie für Erwachsene</h2>
                     <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="home visits in and around greater Freiburg area">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
                     <p data-de="Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen" data-en="Therapy and counseling for adults with acquired speech, language or swallowing disorders">Therapie und Beratung für Erwachsene mit Sprech-, Sprach- oder Schluckstörungen</p>
                     <a href="#contact" class="cta-button" data-de="Kontakt aufnehmen" data-en="Get in Touch">Kontakt aufnehmen</a>
