Remove 'About Me' section from index.html and update header text for speech therapy section.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#services" data-de="Schwerpunkte" data-en="Services">Schwerpunkte</a></li>
-                    <li><a href="#about" data-de="Über mich" data-en="About">Über mich</a></li>
                     <li><a href="#contact" data-de="Kontakt" data-en="Contact">Kontakt</a></li>
                 </ul>
                 <div class="language-toggle">
@@ -40,7 +39,7 @@
             </div>
             <div class="hero-container">
                 <div class="hero-content">
-                    <h2 data-de="Logopädische Therapie für Erwachsene" data-en="Professional Speech Therapy for Adults">Logopädische Therapie für Erwachsene</h2>
+                    <h2 data-de="Logopädische Therapie für Erwachsene" data-en="Speech and Language Therapy for Adults">Logopädische Therapie für Erwachsene</h2>
                     <p class="hero-subtitle" data-de="Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung" data-en="home visits in and around greater Freiburg area">Hausbesuche in Ebringen, Paffenweiler, Schallstadt und Umgebung</p>
                     <p data-de="Therapie und Beratung für Erwachsene mit erworbenen Sprech-, Sprach- oder Schluckstörungen" data-en="Therapy and counseling for adults with acquired speech, language or swallowing disorders">Therapie und Beratung für Erwachsene mit Sprech-, Sprach- oder Schluckstörungen</p>
                     <a href="#contact" class="cta-button" data-de="Kontakt aufnehmen" data-en="Get in Touch">Kontakt aufnehmen</a>
@@ -63,71 +62,6 @@
                     <div class="service-card">
                         <h3 data-de="Englische Therapie" data-en="English Therapy">Englische Therapie</h3>
                         <p data-de="Für Englischsprachige Erwachsene biete ich nach Bedarf Therapie in englischer Sprache an" data-en="For English-speaking adults, I offer therapy in English as needed">Für Englischsprachige Erwachsene biete ich nach Bedarf Therapie in englischer Sprache an</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="about" class="about">
-            <div class="container">
-                <h2 data-de="Über mich" data-en="About Me">Über mich</h2>
-                <div class="timeline">
-                    <div class="timeline-item">
-                        <div class="timeline-year">Ab Januar 2023</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Logopädin in freier Mitarbeiterschaft" data-en="Freelance Speech Therapist">Logopädin in freier Mitarbeiterschaft</h3>
-                            <p data-de="Vorwiegend Hausbesuche" data-en="Primarily home visits">Vorwiegend Hausbesuche</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">2017-2022</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Logopädin in Praxis Carmen Koch" data-en="Speech Therapist at Carmen Koch Practice">Logopädin in Praxis Carmen Koch</h3>
-                            <p data-de="Schallstadt mit Schwerpunkt Therapie für Erwachsene mit Sprech-, Sprach- oder Schluckstörungen" data-en="Schallstadt with focus on therapy for adults with speech, language or swallowing disorders">Schallstadt mit Schwerpunkt Therapie für Erwachsene mit Sprech-, Sprach- oder Schluckstörungen</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">2002-2017</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Erziehungszeit und Sprachförderung" data-en="Parenting Time and Language Development">Erziehungszeit und Sprachförderung</h3>
-                            <p data-de="Kindergarten Don Bosco, Ebringen" data-en="Don Bosco Kindergarten, Ebringen">Kindergarten Don Bosco, Ebringen</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">2002</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Logopädin im Kantonspital" data-en="Speech Therapist at Cantonal Hospital">Logopädin im Kantonspital</h3>
-                            <p data-de="Basel, Schweiz" data-en="Basel, Switzerland">Basel, Schweiz</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">2000-2001</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Sprachtherapeutin im Neurologischen Zentrum" data-en="Speech Therapist at Neurological Center">Sprachtherapeutin im Neurologischen Zentrum</h3>
-                            <p data-de="Segeberger Kliniken GmbH, Bad Segeberg" data-en="Segeberger Clinics GmbH, Bad Segeberg">Segeberger Kliniken GmbH, Bad Segeberg</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">1995-2000</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Teilzeit als Sprachtherapeutin" data-en="Part-time Speech Therapist">Teilzeit als Sprachtherapeutin</h3>
-                            <p data-de="Akutkrankenhaus (Innere und Neurologie) St James's Hospital, Dublin, Irland" data-en="Acute Hospital (Internal Medicine and Neurology) St James's Hospital, Dublin, Ireland">Akutkrankenhaus (Innere und Neurologie) St James's Hospital, Dublin, Irland</p>
-                            <p data-de="Forschungsarbeit im Rahmen eines Masterstudiums im Bereich Aphasie am Trinity College Dublin, Irland. M.Sc. Abschluss" data-en="Research work as part of a Master's degree in Aphasia at Trinity College Dublin, Ireland. M.Sc. degree">Forschungsarbeit im Rahmen eines Masterstudiums im Bereich Aphasie am Trinity College Dublin, Irland. M.Sc. Abschluss</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">1994-1995</div>
-                        <div class="timeline-content">
-                            <h3 data-de="Sprachtherapeutin im Rehabilitationszentrum" data-en="Speech Therapist at Rehabilitation Center">Sprachtherapeutin im Rehabilitationszentrum</h3>
-                            <p data-de="Neurologie Klinik Bavaria, Kreischa bei Dresden" data-en="Neurology Bavaria Clinic, Kreischa near Dresden">Neurologie Klinik Bavaria, Kreischa bei Dresden</p>
-                        </div>
-                    </div>
-                    <div class="timeline-item">
-                        <div class="timeline-year">1994</div>
-                        <div class="timeline-content">
-                            <h3 data-de="B.Sc. Abschluss Logopädie" data-en="B.Sc. Degree in Speech Therapy">B.Sc. Abschluss Logopädie</h3>
-                            <p data-de="'Clinical Speech and Language Studies', Trinity College Dublin, Irland" data-en="'Clinical Speech and Language Studies', Trinity College Dublin, Ireland">'Clinical Speech and Language Studies', Trinity College Dublin, Irland</p>
-                        </div>
                     </div>
                 </div>
             </div>
